Right sidebar is added

--- a/index.html
+++ b/index.html
@@ -118,8 +118,105 @@
           </div>
         </nav>
 
-        <div class="main-content">Here is some text</div>
-        <div class="right-sidebar">Here is some text</div>
+        <div class="main-content">Main content</div>
+        <div class="right-sidebar">
+          <div class="events">
+            <div class="title-cont">
+              <h4>
+                Events
+                <i
+                  class="fa-regular fa-bell"
+                  style="font-weight: bold; color: red; margin-left: 2px"
+                ></i>
+              </h4>
+              <a href="#"> See all</a>
+            </div>
+            <div class="events-list">
+              <div class="event">
+                <div class="event-time">
+                  <h2>5</h2>
+                  <h4>March</h4>
+                </div>
+                <div class="event-info">
+                  <h4>Social media</h4>
+                  <p
+                    style="
+                      font-size: small;
+                      font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana,
+                        sans-serif;
+                    "
+                  >
+                    <i
+                      class="fa-solid fa-location-dot"
+                      style="color: rgb(15, 218, 218)"
+                    ></i>
+                    4 killo, Ethiopia
+                  </p>
+                  <a href="#" style="color: rgb(69, 69, 242)">more info</a>
+                </div>
+              </div>
+              <div class="event">
+                <div class="event-time">
+                  <h2>18</h2>
+                  <h4>may</h4>
+                </div>
+                <div class="event-info">
+                  <h4>Mobile Marketing</h4>
+                  <p
+                    style="
+                      font-size: small;
+                      font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana,
+                        sans-serif;
+                    "
+                  >
+                    <i
+                      class="fa-solid fa-location-dot"
+                      style="color: rgb(15, 218, 218)"
+                    ></i>
+                    4 killo, Ethiopia
+                  </p>
+                  <a href="#" style="color: rgb(69, 69, 242)">more info</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr style="margin: 5px" />
+          <div class="advert">
+            <div class="title-cont">
+              <h4>Advertisement</h4>
+              <a href="#"> Close</a>
+            </div>
+            <div class="advert-img-cont">
+              <a href="#"
+                ><img src="./Images/AAU.jpg" class="aau-img" alt="AAU"
+              /></a>
+            </div>
+          </div>
+          <div class="advert">
+            <div class="title-cont">
+              <h4>
+                Messaging
+                <i
+                  class="fa-solid fa-envelope-open-text"
+                  style="font-weight: bold; color: green; padding-left: 2px"
+                ></i>
+              </h4>
+              <a href="#"> Hide Chat</a>
+            </div>
+            <div class="users" style="flex-direction: column">
+              <div class="user" style="cursor: pointer">
+                <img src="./Images/ma.jpg" class="user-img" alt="user1" />
+                <span> Birtukan moges</span>
+              </div>
+              <div class="user" style="cursor: pointer">
+                <img src="./Images/congra-1.jpg" class="user-img" alt="user2" />
+                <span> Melese A</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Script to activate Feather Icons -->
