Story component is added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,90 @@
           </div>
         </nav>
 
-        <div class="main-content">Main content</div>
+        <div class="main-content">
+          <div class="story-cont">
+            <div class="add-story">
+              <div class="image-container">
+                <img src="./Images/congra-1.jpg" alt="Your Image" />
+                <div class="profile-picture">
+                  <img
+                    src="./Images/congra-1.jpg"
+                    alt="Your Image"
+                    style="border-radius: 50%"
+                  />
+                </div>
+                <div class="add-icon">+</div>
+              </div>
+            </div>
+            <div class="shared-story-cont">
+              <i
+                id="prev-slide"
+                class="fa-solid fa-chevron-left slide-button"
+              ></i>
+              <div class="img-list">
+                <img
+                  src="./Images//story-images/img-1.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-2.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-3.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-4.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-5.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-6.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-7.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-8.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-9.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+                <img
+                  src="./Images//story-images/img-10.jpg"
+                  class="img-item"
+                  alt="image"
+                />
+              </div>
+              <i
+                id="next-slide"
+                class="fa-solid fa-chevron-right slide-button"
+              ></i>
+              <!-- <div class="slider-scrollbar">
+                <div class="scrollbar-track">
+                  <div class="scrollbar-thumb"></div>
+                </div>
+              </div> -->
+            </div>
+          </div>
+        </div>
         <div class="right-sidebar">
           <div class="events">
             <div class="title-cont">
