--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       src="https://kit.fontawesome.com/04a22e07a6.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js" defer></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unity - Book</title>
